--- a/_config.yml
+++ b/_config.yml
@@ -162,7 +162,8 @@ menu:
   tags: /tags/ || tags
   categories: /categories/ || th
   archives: /archives/ || archive
-  game: /game/ || gamepad
+  # game: /game/ || gamepad
+  comments: /comments/ || comments
 
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
@@ -231,7 +232,7 @@ avatar:
   # In theme directory (source/images): /images/avatar.gif
   # In site directory (source/uploads): /uploads/avatar.gif
   # You can also use other linking images.
-  url: /images/avatar.jpeg
+  url: /images/avatar-256.jpg
   # If true, the avatar would be dispalyed in circle.
   rounded: false
   # The value of opacity should be choose from 0 to 1 to set the opacity of the avatar.
@@ -273,7 +274,7 @@ sidebar:
   # Enable sidebar on narrow view (only for Muse | Mist).
   onmobile: true
   # Click any blank part of the page to close sidebar (only for Muse | Mist).
-  dimmer: true
+  dimmer: false
 
 back2top:
   enable: true
@@ -304,7 +305,7 @@ text_align:
   mobile: justify
 
 # Automatically scroll page to section which is under <!-- more --> mark.
-scroll_to_more: true
+scroll_to_more: false
 
 # Automatically saving scroll position on each post / page in cookies.
 save_scroll: false
@@ -635,18 +636,19 @@ changyan:
 # You can get your appid and appkey from https://leancloud.cn
 # More info available at https://valine.js.org
 valine:
-  enable: false # When enable is set to be true, leancloud_visitors is recommended to be closed for the re-initialization problem within different leancloud adk version.
-  appid:  # your leancloud application appid
-  appkey:  # your leancloud application appkey
+  enable: true # When enable is set to be true, leancloud_visitors is recommended to be closed for the re-initialization problem within different leancloud adk version.
+  appid: xKOxwePoHeELQPP3auI4iGt4-gzGzoHsz # your leancloud application appid
+  appkey: Oj7HRBN2ddvp7TlBs5mSP2Vr # your leancloud application appkey
   notify: false # mail notifier, See: https://github.com/xCss/Valine/wiki
-  verify: false # Verification code
-  placeholder: Just go go # comment box placeholder
+  verify: true # Verification code
+  placeholder: 来都来了，说点什么吧~ # comment box placeholder
   avatar: mm # gravatar style
   guest_info: nick,mail,link # custom comment header
-  pageSize: 10 # pagination size
-  language: # language, available values: en, zh-cn
+  pageSize: 20 # pagination size
+  language: zh-cn # language, available values: en, zh-cn
   visitor: false # leancloud-counter-security is not supported for now. When visitor is set to be true, appid and appkey are recommended to be the same as leancloud_visitors' for counter compatibility. Article reading statistic https://valine.js.org/visitor.html
   comment_count: true # if false, comment count will only be displayed in post page, not in home page
+  recordIP: true
 
 # LiveRe comments system
 # You can get your uid from https://livere.com/insight/myCode (General web site)
